--- a/PakPatcher/PakPatcher.csproj
+++ b/PakPatcher/PakPatcher.csproj
@@ -5,9 +5,6 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="PakFileCache\PakFileCache.csproj" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="NLog" Version="5.1.3" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
@@ -44,5 +41,8 @@
     <Compile Remove="PakFileCache\StreamUtil.cs" />
     <Compile Remove="PakFileCache\ZipReadFile.cs" />
     <Compile Remove="PakFileCache\ZipReplicate.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PakFileCache\PakFileCache.csproj" />
   </ItemGroup>
 </Project>
