--- a/TestGen/Properties/launchSettings.json
+++ b/TestGen/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "TestGen": {
       "commandName": "Project",
-      "commandLineArgs": "d:\\code\\PakPatcher\\test\\gen_v1 d:\\code\\PakPatcher\\test\\gen_v2 test.zip foo.zip"
+      "commandLineArgs": "d:\\code\\PakPatcher\\test\\gen_v1 d:\\code\\PakPatcher\\test\\gen_v2 test.zip foo.zip bar.zip baz.zip widget.zip gadget.zip"
     }
   }
 }
